[package]
name = "tmzgua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
endorphin = "0.1"
fnv = "1.0"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", features = ["voice"] }
songbird = { version = "0.3", features = ["tokio", "serenity"] }
tap = "1.0"
tokio = { version = "1.29", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
