[package]
name = "tmzgua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1"
chrono = "0.4"
endorphin = "0.1"
fnv = "1.0"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", features = ["voice"] }
songbird = { version = "0.4", features = ["serenity"] }
symphonia = { version = "0.5", features = ["aac", "aiff"] }
tap = "1.0"
tokio = { version = "1.29", features = [
    "macros",
    "rt-multi-thread",
    "process",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
